# OxidePaste

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  build.sh
.github/workflows/: build.yml
migrations/: 202601170001_create_pastes_table.sql  202601170002_create_users_table.sql  202601170003_add_user_to_pastes.sql
src/: db.rs  handlers.rs  main.rs  models.rs  utils.rs
templates/: dashboard.html  index.html  login.html  not_found.html  password.html  public.html  register.html  view.html
