[package]
name = "oxide-paste"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A fast and secure pastebin service built with Rust"
authors = ["Sirayu Petcharanon"]

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
askama = "0.12"
tower-http = { version = "0.5", features = ["fs", "cors"] }
bcrypt = "0.15"